[package]
name = "vs-queue"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["clock"] }
clap = { version = "4.5.50", features = ["derive"] }
crossterm = "0.29.0"
ctrlc = "3.5.0"
libc = "0.2.184"
ratatui = { version = "0.30.0", features = ["crossterm_0_29"] }
regex = "1.12.2"
